--- a/backend/src/vercel.json
+++ b/backend/src/vercel.json
@@ -4,6 +4,6 @@
       { "src": "app.py", "use": "@vercel/python" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "src/app.py" }
+      { "src": "/(.*)", "dest": "/app.py" }
     ]
   }
