--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
-FLASK_ENV=development
-SECRET_KEY=your_secret_key_herepascalAssiynment,@##loosing&*
-MONGODB_URI=mongodb+srv://pascal:BQSPzuM6SJjuxTUo@cluster0.gr4bpnb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+SECRET_KEY=herepascalAssiynment,@##loosing&
+MONGO_URI=mongodb+srv://pascal:BQSPzuM6SJjuxTUo@cluster0.gr4bpnb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
